[tool.poetry]
name = "ka-dengue-reports"
version = "0.1.0"
description = ""
authors = ["Sai Sneha <sneha@artpark.in>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
dataio = {git = "https://github.com/dsih-artpark/dataio.git"}
pandas = "^2.2.2"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipython = ">8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "FLY", "RUF", "B", "ICN"]

[tool.ruff]
line-length = 140